#
# Copyright (c) 2014-2019 Intel, Inc.  All rights reserved.
# Copyright (c) 2014-2020 Cisco Systems, Inc.  All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

headers += \
          prrted/pmix/pmix_server.h \
          prrted/pmix/pmix_server_internal.h

libprrte_la_SOURCES += \
          prrted/pmix/pmix_server.c \
          prrted/pmix/pmix_server_fence.c \
          prrted/pmix/pmix_server_register_fns.c \
          prrted/pmix/pmix_server_dyn.c \
          prrted/pmix/pmix_server_pub.c \
          prrted/pmix/pmix_server_gen.c \
          prrted/pmix/pmix_server_queries.c
