#
# Copyright (c) 2015 Cisco Systems, Inc.  All rights reserved.
# Copyright (c) 2019-2020 Intel, Inc.  All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

headers += \
        base/base.h

libmca_prrtedl_la_SOURCES += \
        base/prrtedl_base_open.c \
        base/prrtedl_base_close.c \
        base/prrtedl_base_select.c \
        base/prrtedl_base_fns.c
