#
# Copyright (c) 2006      Los Alamos National Security, LLC.  All rights
#                         reserved.
# Copyright (c) 2019-2020 Intel, Inc.  All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

headers += \
        base/base.h

libmca_prrteinstalldirs_la_SOURCES += \
        base/prrteinstalldirs_base_components.c \
        base/prrteinstalldirs_base_expand.c
